added Gmail smtp

--- a/pom.xml
+++ b/pom.xml
@@ -20,16 +20,19 @@
             <artifactId>javafx-fxml</artifactId>
             <version>12</version>
         </dependency>
-        <dependency>
-            <groupId>javax.mail</groupId>
-            <artifactId>javax.mail-api</artifactId>
-            <version>1.6.2</version>
-        </dependency>
+
         <dependency>
         <groupId>com.sun.mail</groupId>
         <artifactId>javax.mail</artifactId>
         <version>1.6.2</version>
         </dependency>
+        <!-- https://mvnrepository.com/artifact/javax.xml/jaxrpc-api -->
+<!--        <dependency>-->
+<!--            <groupId>javax.xml</groupId>-->
+<!--            <artifactId>jaxrpc-api</artifactId>-->
+<!--            <version>1.1</version>-->
+<!--        </dependency>-->
+
 
     </dependencies>
     <build>
